--- a/aspnet-core/src/Store.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Store.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Store;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
   "OpenIddict": {
     "Applications": {
