--- a/aspnet-core/src/Store.Domain/Store.Domain.csproj
+++ b/aspnet-core/src/Store.Domain/Store.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -22,6 +22,10 @@
     <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="6.0.0" />
     <PackageReference Include="Volo.Abp.OpenIddict.Domain" Version="6.0.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Promotions\" />
   </ItemGroup>
 
 </Project>
