feat: make seeder data

--- a/aspnet-core/src/Store.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Store.DbMigrator/appsettings.json
@@ -7,16 +7,12 @@
       "Store_Web": {
         "ClientId": "Store_Web",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44358"
+        "RootUrl": "https://localhost:5002"
       },
-      "Store_App": {
-        "ClientId": "Store_App",
-        "RootUrl": "http://localhost:4200"
-      },
-      "Store_BlazorServerTiered": {
-        "ClientId": "Store_BlazorServerTiered",
+      "Store_Admin": {
+        "ClientId": "Store_Admin",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44333"
+        "RootUrl": "https://localhost:5001"
       },
       "Store_Swagger": {
         "ClientId": "Store_Swagger",
