--- a/aspnet-core/src/Store.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Store.DbMigrator/appsettings.json
@@ -12,11 +12,11 @@
       "Store_Admin": {
         "ClientId": "Store_Admin",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:5001"
+        "RootUrl": "http://localhost:4200"
       },
-      "Store_Swagger": {
-        "ClientId": "Store_Swagger",
-        "RootUrl": "https://localhost:44354"
+      "Store_Admin_Swagger": {
+        "ClientId": "Store_Admin_Swagger",
+        "RootUrl": "https://localhost:5001"
       }
     }
   }
