--- a/aspnet-core/src/Store.AuthServer/appsettings.json
+++ b/aspnet-core/src/Store.AuthServer/appsettings.json
@@ -1,12 +1,12 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44351",
+    "SelfUrl": "https://localhost:44339",
     "ClientUrl": "http://localhost:4200",
-    "CorsOrigins": "https://*.Store.com,http://localhost:4200,https://localhost:44326,https://localhost:44354",
-    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44358,https://localhost:44326,https://localhost:44333"
+    "CorsOrigins": "https://*.Store.com,http://localhost:4200,https://localhost:5001,https://localhost:5002",
+    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44317,https://localhost:5001,https://localhost:5002"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Store;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
