--- a/aspnet-core/src/Store.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Store.HttpApi.Host/appsettings.json
@@ -3,13 +3,13 @@
     "CorsOrigins": "https://*.Store.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Store;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44351",
+    "Authority": "https://localhost:5000",
     "RequireHttpsMetadata": "true",
     "SwaggerClientId": "Store_Swagger"
   },
