feat: display product category

--- a/aspnet-core/src/Store.Public.Web/Store.Public.Web.csproj
+++ b/aspnet-core/src/Store.Public.Web/Store.Public.Web.csproj
@@ -323,6 +323,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="1.0.0-rc.*" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
