--- a/aspnet-core/src/Store.Public.Web/appsettings.json
+++ b/aspnet-core/src/Store.Public.Web/appsettings.json
@@ -5,6 +5,9 @@
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
+  "Redis": {
+    "Configuration": "127.0.0.1"
+  },
   "StringEncryption": {
     "DefaultPassPhrase": "xvyh3N7A5YeGHEoM"
   }
