--- a/aspnet-core/src/Store.Domain/Store.Domain.csproj
+++ b/aspnet-core/src/Store.Domain/Store.Domain.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Emailing\Templates\" />
+  </ItemGroup>
+
 </Project>
