--- a/aspnet-core/src/Store.Public.Web/Store.Public.Web.csproj
+++ b/aspnet-core/src/Store.Public.Web/Store.Public.Web.csproj
@@ -326,6 +326,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.Emailing" Version="6.0.0" />
     <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="6.0.0" />
     <PackageReference Include="Volo.Abp.Identity.AspNetCore" Version="6.0.0" />
   </ItemGroup>
