--- a/aspnet-core/src/Store.Public.Web/appsettings.json
+++ b/aspnet-core/src/Store.Public.Web/appsettings.json
@@ -10,5 +10,16 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "xvyh3N7A5YeGHEoM"
+  },
+  "Settings": {
+    "Abp.Mailing.Smtp.Host": "smtp.mailgun.org",
+    "Abp.Mailing.Smtp.Port": "25",
+    "Abp.Mailing.Smtp.UserName": "no-reply@ecom.com.vn",
+    "Abp.Mailing.Smtp.Password": "f208d22d76ad33f36e4c1fb2337f571b-6fafb9bf-b7526102",
+    "Abp.Mailing.Smtp.Domain": "",
+    "Abp.Mailing.Smtp.EnableSsl": "true",
+    "Abp.Mailing.Smtp.UseDefaultCredentials": "false",
+    "Abp.Mailing.DefaultFromAddress": "infor@ecom.com.vn",
+    "Abp.Mailing.DefaultFromDisplayName": "ECOM"
   }
 }
