--- a/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.secrets.json
+++ b/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.secrets.json
@@ -1,2 +1,19 @@
 {
+  "App": {
+    "CorsOrigins": "https://*.Store.com,http://localhost:4200"
+  },
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
+  },
+  "Redis": {
+    "Configuration": "red-cq32obss1f4s73f7hr0g:6379"
+  },
+  "AuthServer": {
+    "Authority": "https://localhost:5000",
+    "RequireHttpsMetadata": "true",
+    "SwaggerClientId": "Store_Admin_Swagger"
+  },
+  "StringEncryption": {
+    "DefaultPassPhrase": "8Qwcau8r4NgQxoAL"
+  }
 }
