--- a/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
   "Redis": {
-    "Configuration": "red-cq32obss1f4s73f7hr0g:6379"
+    "Configuration": "rediss://red-cq32obss1f4s73f7hr0g:v0W1LWczPdueffa0FEwgkm6J4KEavcJn@singapore-redis.render.com:6379"
   },
   "AuthServer": {
     "Authority": "https://localhost:5000",
