fix: Update Redis configuration for deployment

--- a/aspnet-core/src/Store.AuthServer/appsettings.json
+++ b/aspnet-core/src/Store.AuthServer/appsettings.json
@@ -9,7 +9,7 @@
     "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
   "Redis": {
-    "Configuration": "127.0.0.1"
+    "Configuration": "redis-11531.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:11531,password=AKiw3TrdIPIZrEgaO1OlYrnwm7Ur3JJB"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "8Qwcau8r4NgQxoAL"
