--- a/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.secrets.json
+++ b/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.secrets.json
@@ -6,7 +6,7 @@
     "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
   "Redis": {
-    "Configuration": "rediss://red-cq32obss1f4s73f7hr0g:v0W1LWczPdueffa0FEwgkm6J4KEavcJn@singapore-redis.render.com:6379"
+    "Configuration": "redis-11531.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:11531,password=AKiw3TrdIPIZrEgaO1OlYrnwm7Ur3JJB"
   },
   "AuthServer": {
     "Authority": "https://localhost:5000",
