--- a/aspnet-core/src/Store.Public.Web/appsettings.json
+++ b/aspnet-core/src/Store.Public.Web/appsettings.json
@@ -6,7 +6,7 @@
     "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
   },
   "Redis": {
-    "Configuration": "127.0.0.1"
+    "Configuration": "redis-11531.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:11531,password=AKiw3TrdIPIZrEgaO1OlYrnwm7Ur3JJB"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "xvyh3N7A5YeGHEoM"
