--- a/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.Store.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
+    "Default": "Server=mssql-177592-0.cloudclusters.net\\admin;Database=StoreABP;Password=ks$rhre8WdzSOm;Trusted_Connection=True;Port=10090"
   },
   "Redis": {
     "Configuration": "redis-11531.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:11531,password=AKiw3TrdIPIZrEgaO1OlYrnwm7Ur3JJB"
