feat: fixing url

--- a/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Store.Admin.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.Store.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=mssql-177592-0.cloudclusters.net,10090;User Id=admin;Password=ks$rhre8WdzSOm;Database=StoreABP;Trusted_Connection=True"
+    "Default": "Data Source=mssql-177592-0.cloudclusters.net,10090;Database=StoreABP;User Id=admin;Password=ks$rhre8WdzSOm;Encrypt=True;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "redis-11531.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:11531,password=AKiw3TrdIPIZrEgaO1OlYrnwm7Ur3JJB"
