--- a/aspnet-core/src/Store.AuthServer/appsettings.json
+++ b/aspnet-core/src/Store.AuthServer/appsettings.json
@@ -1,12 +1,12 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44339",
+    "SelfUrl": "https://abp-store.onrender.com/",
     "ClientUrl": "http://localhost:4200",
     "CorsOrigins": "https://*.Store.com,http://localhost:4200,https://localhost:5001,https://localhost:5002",
     "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44317,https://localhost:5001,https://localhost:5002"
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
+    "Default": "Data Source=mssql-177592-0.cloudclusters.net,10090;Database=StoreABP;User Id=admin;Password=ks$rhre8WdzSOm;Encrypt=True;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "redis-11531.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:11531,password=AKiw3TrdIPIZrEgaO1OlYrnwm7Ur3JJB"
