--- a/aspnet-core/src/Store.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Store.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-7SGJQHN\\ADMIN;Database=StoreABP;Trusted_Connection=True"
+    "Default": "Data Source=mssql-177592-0.cloudclusters.net,10090;Database=StoreABP;User Id=admin;Password=ks$rhre8WdzSOm;Encrypt=True;TrustServerCertificate=True"
   },
   "OpenIddict": {
     "Applications": {
@@ -16,7 +16,7 @@
       },
       "Store_Admin_Swagger": {
         "ClientId": "Store_Admin_Swagger",
-        "RootUrl": "https://localhost:5001"
+        "RootUrl": "https://abp-store.onrender.com/"
       }
     }
   }
